<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:weightSum="1"
    android:background="@drawable/design">

    <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:hint="Enter your email"
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:backgroundTint="@color/text_color"/>

    <EditText
        android:layout_margin="15dp"
        android:hint="Enter your username"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:backgroundTint="@color/text_color"/>

    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:hint="Enter your password"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:backgroundTint="@color/text_color"/>


    <Button
        android:layout_margin="15dp"
        android:id="@+id/buttonRegister"
        android:text="Register User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAlignment="center"
        android:text="Already Registered? Sign in here"
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"/>


</LinearLayout>